# odc-dev-kit-temp

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_CONFIG.md  README.md
.claude/: settings.json
.claude/skills/outsystems-mentor-polling-behavior/scripts/: 00-sftdd-workflow.md  00-use-case.md  pyproject.toml  run.py
.claude/skills/outsystems-mentor-polling-behavior/scripts/tests/: test_run.py
agents/: odc-action-reviewer.md
docs/: conversation-log-2026-07-14.md
hooks/: session-start.sh
notes/: 2026-07-21-newapp-gap-analysis.md  2026-07-22-changepwd-built-widget-tree.md  2026-07-22-changepwd-gap-report.md  2026-07-22-changepwd-reference-widget-tree.md  2026-07-22-invalidperms-built-widget-tree.md  2026-07-22-invalidperms-gap-report.md  2026-07-22-invalidperms-reference-widget-tree.md  2026-07-22-login-screen-built-widget-tree.md  2026-07-22-login-screen-gap-report.md  2026-07-22-login-screen-reference-widget-tree.md  2026-07-22-recoverpwrequest-built-widget-tree.md  2026-07-22-recoverpwrequest-gap-report.md  2026-07-22-recoverpwrequest-reference-widget-tree.md  2026-07-22-recoverpwreset-built-widget-tree.md  2026-07-22-recoverpwreset-gap-report.md  2026-07-22-recoverpwreset-reference-widget-tree.md  2026-07-23-common-blocks-built-widget-trees.md  2026-07-23-common-blocks-gap-report.md  2026-07-23-common-blocks-reference-widget-trees.md  2026-07-23-email-template-css-gap-report.md  2026-07-23-emails-built-widget-trees.md  2026-07-23-emails-gap-report.md  2026-07-23-emails-reference-widget-trees.md  2026-07-23-layoutbase-built-widget-tree.md  (+13 more)
rules/: database.md  (+5 more)
(+119 files in other folders)
